<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.a0xffffffff.dinesum.RequesterFragment"
    >

    <ProgressBar
        android:id="@+id/requester_progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="50dp"
        android:minWidth="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ListView
            android:id="@+id/requester_request_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:transcriptMode="normal"
            />

        <TextView
            android:id="@+id/requester_empty_list_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:text="End of Requests"
            android:textColor="@color/red_700"
            android:textSize="20sp"
            />

    </LinearLayout>

</FrameLayout>
